fix overflow-x to campaign

--- a/client/src/app/components/panelAdmin/dashboard-campagne/dashboard-campagne.component.scss
+++ b/client/src/app/components/panelAdmin/dashboard-campagne/dashboard-campagne.component.scss
@@ -49,6 +49,7 @@
             flex: 1;
             height: 100%;
             flex-direction: row;
+            overflow-x: hidden;
             .app-campagne{
                 min-height: 400px;
                 flex: 2;
